--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">AndroidTest</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_tab_one_fragment">Hello Tab One fragment</string>
+    <string name="hello_tab_two_fragment">Hello Tab Two fragment</string>
+    <string name="hello_tab_three_blank_fragment">Hello Tab Three fragment</string>
 </resources>
